--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@mozilla/readability": "^0.5.0",
+    "antd": "^5.18.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "eventsource-parser": "^1.1.2",
     "jsdom": "^24.1.0",
+    "lucide-react": "^0.395.0",
     "next": "14.2.3",
     "next-plausible": "^3.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "together-ai": "^0.6.0-alpha.3",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.0"
