--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mozilla/readability": "^0.5.0",
+    "@vercel/analytics": "^1.3.1",
     "antd": "^5.18.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
